@@ -30,6 +30,9 @@ on.
 Come to Arulco - and remember: You fight for Freedom. You kill for cash!
 .Sh OPTIONS
 .Bl -tag -width "~/.ja2/ja2.ini"
+.It Fl editor
+Start the map editor instead of the game (only available if built with editor
+support)
 .It Fl fullscreen
 Start the game in fullscreen mode
 .It Fl nosound
