@@ -5,6 +5,5 @@
 
 
 extern BOOLEAN		gfProgramIsRunning; // Turn this to FALSE to exit program
-extern CHAR8			gzCommandLine[100];	// Command line given
 
 #endif
